# multicam-ego-sync

./: README.md  pyproject.toml
src/multicam_ego_sync/gradio_ui/: sync_app.py
tools/: app.py
